--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       <button id="play-applied">play custom-fan-node-applied song</button>
       <button id="stop-applied">stop it</button>
     </div>
+    <div>
+      <p><strong>원리: 들어오는 입력에 대해 사인파를 곱해 마치 선풍기 앞에서 말하는 것과 같은 효과를 주었음.</strong></p>
+    </div>
     <script src="AudioWorkletNode.js"></script>
   </body>
 </html>
