--- a/index.html
+++ b/index.html
@@ -1,25 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="kr">
   <head>
     <meta charset="utf-8">
-    <title>AudioWorklet Practice</title>
+    <title>Cor's nest</title>
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
-    <p>Web Audio API -- AudioWorklet Practice</p>
-    <audio id="audio1" src="a_great_day_of_October.m4a"></audio>
-    <audio id="audio2" src="a_great_day_of_October.m4a"></audio>
-    <div>
-      <button id="play-original">play original song</button>
-      <button id="stop-original">stop it</button>
-    </div>
-    <div>
-      <button id="play-applied">play custom-fan-node-applied song</button>
-      <button id="stop-applied">stop it</button>
-    </div>
-    <div>
-      <p><strong>원리: 들어오는 입력에 대해 사인파를 곱해 마치 선풍기 앞에서 말하는 것과 같은 효과를 주었음.</strong></p>
-    </div>
-    <script src="AudioWorkletNode.js"></script>
+    <header>
+      <p id="title">Cor's nest</p>
+      <p id="subtitle">A place where I leave my trace</p>
+      <br>
+      <p id="description">I'm highly interested in Web Audio API. <a href="https://github.com/logic-finder" target="_blank">github address</a></p>
+    </header>
+    <main>
+      <ul>
+        <li><a href="/WebAudioAPISpecTranslation/index.html">W3C Web Audio API Specification Korean translation</a> (currently on work: 2021. 11. 18 ~ )</li>
+        <li><a href="/AudioWorkletPractice/index.html">AudioWorklet practice</a></li>
+      </ul>
+    </main>
   </body>
 </html>
