--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -340,6 +340,9 @@ interface BaseAudioContext : EventTarget {
           <dt><i>destination</i> / 자료형: AudioDestinationNode / 읽기 전용</dt>
           <dd>모든 오디오의 최종 목적지를 나타내는 하나의 입력을 가진 AudioDestinationNode. 보통 이것은 실제 오디오 하드웨어를 나타냅니다. 오디오를 현재 렌더링하고 있는 모든 AudioNode는 직접적으로 혹은 간접적으로 목적지에 연결됩니다.</dd>
           <br>
+          <dt><i>listener</i> / 자료형: AudioListener / 읽기 전용</dt>
+          <dd>3D 공간화에 사용되는 AudioListener</dd>
+          <br>
         </dl>
     </div>
     </main>
