--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -351,7 +351,14 @@ interface BaseAudioContext : EventTarget {
           <br>
           <dt><i>state</i> / 자료형: AudioContextState / 읽기 전용</dt>
           <dd>BaseAudioContext의 현재 상태를 기술합니다. 이 어트리뷰트를 get하는 것은 [[control thread state]] 슬롯의 내용을 반환합니다.</dd>
-          <br>
+        </dl>
+        <br>
+        <h3>메서드</h3>
+        <dl>
+          <dt><i>createAnalyser()</i></dt>
+          <dd>AnalyserNode의 팩토리 메서드.</dd>
+          <dd>매개변수 없음</dd>
+          <dd>반환 유형: AnalyserNode</dd>
         </dl>
     </div>
     </main>
