--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -359,6 +359,12 @@ interface BaseAudioContext : EventTarget {
           <dd>AnalyserNode의 팩토리 메서드.</dd>
           <dd>매개변수 없음</dd>
           <dd>반환 유형: AnalyserNode</dd>
+          <br>
+          <dt><i>createBiquadFilter()</i></dt>
+          <dd>몇몇 일반적인 필터 유형 중 하나로써 설정될 수 있는 second order 필터를 나타내는 BiquadFilterNode의 팩토리 메서드.</dd>
+          <dd>매개변수 없음</dd>
+          <dd>반환 유형: BiquadFilterNode</dd>
+          <br>
         </dl>
     </div>
     </main>
