--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -400,6 +400,10 @@ interface BaseAudioContext : EventTarget {
           </table>
           <dd>반환 유형: AudioBuffer</dd>
           <br>
+          <dt><i>createBufferSource()</i></dt>
+          <dd>AudioBufferSourceNode의 팩토리 메서드</dd>
+          <dd>매개변수 없음</dd>
+          <dd>반환 유형: AudioBufferSourceNode</dd>
         </dl>
     </div>
     </main>
