--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -395,7 +395,7 @@ interface BaseAudioContext : EventTarget {
               <td>float</td>
               <td>x</td>
               <td>x</td>
-              <td>초당 샘플 프레임 내의 버퍼의 선형 PCM 오디오 데이터의 샘플 레이트를 기술합니다. 구현은 반드시 적어도 범위 8000에서 96000까지의 샘플 레이터를 지원해야 합니다.</td>
+              <td>초당 샘플 프레임 내의 버퍼의 선형 PCM 오디오 데이터의 샘플 레이트를 기술합니다. 구현은 반드시 적어도 범위 8000에서 96000까지의 샘플 레이트를 지원해야 합니다.</td>
             </tr>
           </table>
           <dd>반환 유형: AudioBuffer</dd>
