--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -445,7 +445,12 @@ interface BaseAudioContext : EventTarget {
               <td>출력의 수. 32까지의 값이 반드시 지원되어야만 합니다. 만약 명시되지 않았다면, 6이 사용될 것입니다.</td>
             </tr>
           </table>
-          <dd>반환 유형:ChannelSplitterNode</dd>
+          <dd>반환 유형: ChannelSplitterNode</dd>
+          <br>
+          <dt><i>createConstantSource()</i></dt>
+          <dd>ConstantSourceNode의 팩토리 메서드</dd>
+          <dd>매개변수 없음</dd>
+          <dd>반환 유형: ConstantSourceNode</dd>
           <br>
         </dl>
     </div>
