--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -452,6 +452,11 @@ interface BaseAudioContext : EventTarget {
           <dd>매개변수 없음</dd>
           <dd>반환 유형: ConstantSourceNode</dd>
           <br>
+          <dt><i>createConvolver()</i></dt>
+          <dd>ConvolverNode의 팩토리 메서드</dd>
+          <dd>매개변수 없음</dd>
+          <dd>반환 유형: ConvolverNode</dd>
+          <br>
         </dl>
     </div>
     </main>
