--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -478,6 +478,11 @@ interface BaseAudioContext : EventTarget {
           </table>
           <dd>반환 유형: DelayNode</dd>
           <br>
+          <dt><i>createDynamicsCompressor()</i></dt>
+          <dd>DynamicsCompressorNode의 팩토리 메서드</dd>
+          <dd>매개변수 없음</dd>
+          <dd>반환 유형: DynamicsCompressorNode</dd>
+          <br>
         </dl>
     </div>
     </main>
