--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -483,6 +483,11 @@ interface BaseAudioContext : EventTarget {
           <dd>매개변수 없음</dd>
           <dd>반환 유형: DynamicsCompressorNode</dd>
           <br>
+          <dt><i>createGain()</i></dt>
+          <dd>GainNode의 팩토리 메서드</dd>
+          <dd>매개변수 없음</dd>
+          <dd>반환 유형: GainNode</dd>
+          <br>
         </dl>
     </div>
     </main>
