--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -488,6 +488,33 @@ interface BaseAudioContext : EventTarget {
           <dd>매개변수 없음</dd>
           <dd>반환 유형: GainNode</dd>
           <br>
+          <dt><i>createIIRFilter(feedforward, feedback)</i></dt>
+          <table>
+            <caption>BaseAudioContext.createcreateIIRFilter(feedforward, feedback) 메서드의 인자</caption>
+            <tr>
+              <td>매개변수</td>
+              <td>자료형</td>
+              <td>nullable</td>
+              <td>optional</td>
+              <td>설명</td>
+            </tr>
+            <tr>
+              <td>feedforward</td>
+              <td>sequence&lt;double&gt;</td>
+              <td>x</td>
+              <td>x</td>
+              <td>IIR 필터의 transfer 함수의 feedforward (분자) 계수의 배열입니다. 이 배열의 최대 길이는 20입니다. 만약 모든 값들이 0이라면, InvalidStateError가 반드시 발생되어야 합니다. 만약 배열의 길이가 0이거나 20보다 크다면 NotSupportedError가 반드시 발생되어야 합니다.</td>
+            </tr>
+            <tr>
+              <td>feedback</td>
+              <td>sequence&lt;double&gt;</td>
+              <td>x</td>
+              <td>x</td>
+              <td>IIR 필터의 transfer 함수의 feedback (분모) 계수의 배열입니다. 이 배열의 최대 길이는 20입니다. 만약 이 배열의 첫번째 요소가 0이라면, InvalidStateError가 반드시 발생되어야 합니다. 만약 배열의 길이가 0이거나 20보다 크다면 NotSupportedError가 반드시 발생되어야 합니다.</td>
+            </tr>
+          </table>
+          <dd>반환 유형: IIRFilterNode</dd>
+          <br>
         </dl>
     </div>
     </main>
