--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -515,6 +515,11 @@ interface BaseAudioContext : EventTarget {
           </table>
           <dd>반환 유형: IIRFilterNode</dd>
           <br>
+          <dt><i>createOscillator()</i></dt>
+          <dd>OscillatorNode의 팩토리 메서드</dd>
+          <dd>매개변수 없음</dd>
+          <dd>반환 유형: OscillatorNode</dd>
+          <br>
         </dl>
         <h2>AudioParam 인터페이스</h2>
         <p>AudioParam은 0개 이상의 <strong>자동화 이벤트</strong>를 유지합니다. 각 자동화 이벤트는, AudioContext의 currentTime 어트리뷰트의 시간 좌표계의 <strong>자동화 이벤트 시간</strong>에 관련하여, 특정한 시간 범위에 대한 파라미터의 값 변화를 명시합니다. 자동화 이벤트의 리스트는 자동화 이벤트 시간의 오름차순으로 유지됩니다.</p>
