--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -615,6 +615,104 @@ interface BaseAudioContext : EventTarget {
           <p>노트: 예를 들어, 이것은 audio callback이 정기적으로 발생되는 것을 기다리거나, 하드웨어가 프로세싱을 위해 준비되기를 기다리는 것을 포함할 수 있습니다.</p>
         </div>
         <br>
+        <h2>1.2. AudioContext 인터페이스</h2>
+        <p>이 인터페이스는 유저에게 향하는 신호를 생산하는 실시간 출력 장치로 라우팅되는 AudioDestinationNode를 가지고 있는 오디오 그래프를 나타냅니다. 대부분의 사용 경우에, 오직 하나의 AudioContext가 문서당 사용됩니다.</p>
+        <pre>
+enum AudioContextLatencyCategory {
+  "balanced",
+  "interactive",
+  "playback"
+};
+        </pre>
+        <table>
+          <thead>
+            <tr>
+              <th colspan="2">열거형 설명</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>"<i>balanced</i>"</td>
+              <td>오디오 출력 레이턴시와 파워 소모의 균형을 유지합니다.</td>
+            </tr>
+            <tr>
+              <td>"<i>interactive</i>"</td>
+              <td>glitching이 없는 가능한 가장 낮은 오디오 출력 레이턴시를 제공합니다. 이것이 기본값입니다.</td>
+            </tr>
+            <tr>
+              <td>"<i>playback</i>"</td>
+              <td>오디오 출력 레이턴시에 대한 중단 없이 일관된 재생을 우선적으로 처리합니다. 파워 소모가 가장 적습니다.</td>
+            </tr>
+          </tbody>
+        </table>
+        <br>
+        <pre>
+[Exposed=Window]
+interface AudioContext : BaseAudioContext {
+  constructor (optional AudioContextOptions contextOptions = {});
+  readonly attribute double baseLatency;
+  readonly attribute double outputLatency;
+  AudioTimestamp getOutputTimestamp ();
+  Promise<undefined> resume ();
+  Promise<undefined> suspend ();
+  Promise<undefined> close ();
+  MediaElementAudioSourceNode createMediaElementSource (HTMLMediaElement mediaElement);
+  MediaStreamAudioSourceNode createMediaStreamSource (MediaStream mediaStream);
+  MediaStreamTrackAudioSourceNode createMediaStreamTrackSource (
+    MediaStreamTrack mediaStreamTrack);
+  MediaStreamAudioDestinationNode createMediaStreamDestination ();
+};
+        </pre>
+        <p>AudioContext는 user agent가 컨텍스트 상태가 "suspended"에서 "running"으로 전이되는 것을 허용한 경우 <strong>시작되도록 허용</strong>됩니다. user agent는 이 초기 전이를 비허용할 수 있으며 이것을 허용하기 위해서는 AudioContext'의 관련된 전역 객체가 sticky activation을 가지고 있어야만 합니다.</p>
+        <p>AudioContext는 내부 슬롯을 가지고 있습니다:</p>
+        <dl>
+          <dt><i>[[suspended by user]]</i></dt>
+          <dd>context가 사용자 코드에 의해 suspended되었는지를 나타내는 boolean flag. 초기값은 false.</dd>
+        </dl>
+        <br>
+        <h3>1.2.1. 생성자</h3>
+        <dl>
+          <dt><i>AudioContext(contextOptions)</i></dt>
+          <dd>만약 current settings object의 responsible document가 완전히 active하지 않다면, InvalidStateError를 발생시키고 아래의 과정들을 중단시킵니다.</dd>
+          <br>
+          <dd>AudioContext를 생성할 때, 아래의 과정들을 수행합니다:</dd>
+          <dd>추후 번역</dd>
+        </dl>
+        <br>
+        <div class="note">
+          <p>노트: 프로그래밍적으로 작성자에게 AudioContext의 생성이 실패했다는 것을 알리는 것이 불행하게도 가능하지 않습니다. 유저 에이전트는 만약 작성자가 로깅 메커니즘에 접근권한을 가지고 있다면 정보 메시지를 로그할 것이 장려됩니다 (예: 개발자 도구 콘솔).</p>
+        </div>
+        <br>
+        <table>
+          <caption>AudioContext.constructor(contextOptions) 메서드의 인자</caption>
+          <tr>
+            <td>매개변수</td>
+            <td>자료형</td>
+            <td>nullable</td>
+            <td>optional</td>
+            <td>설명</td>
+          </tr>
+          <tr>
+            <td>contextOptions</td>
+            <td>AudioContextOptions</td>
+            <td>x</td>
+            <td>v</td>
+            <td>AudioContext가 어떻게 생성되어야 하는지를 제어하는 유저가 명시한 옵션</td>
+          </tr>
+        </table>
+        <br>
+        <h3>1.2.2. 어트리뷰트</h3>
+        <dl>
+          <dt><i>baseLatency</i> / 자료형: double / 읽기 전용</dt>
+          <dd>baseLatency는 AudioDestinationNode에서 audio subsystem으로 오디오를 전달하는 AudioContext에 의해 발생되는 프로세싱 레이턴시의 초를 나타냅니다. 이것은 AudioDestinationNode의 출력과 오디오 하드웨어 사이의 다른 프로세싱에 의해 유발될 수 있는 다른 추가적인 레이턴시를 포함하지 않으며 분명히 오디오 그래프 그 자체에 의해 발생되는 모든 레이턴시를 포함하지 않습니다.</dd>
+          <br>
+          <dd>예를 들어, 만약 오디오 컨텍스트가 44.1 kHz로 실행되고 AudioDestinationNode가 내부적으로 double buffering을 구현하고 각 render quantum마다 오디오를 처리하고 출력할 수 있다면, 이 경우 프로세싱 레이턴시는 (2 * 128) / 44100 = 5.805ms (근사치) 입니다.</dd>
+          <br>
+          <dt><i>outputLatency</i> / 자료형: double / 읽기 전용 / 현재 파이어폭스 엔진에만 있음</dt>
+          <dd>오디오 출력 레이턴시의 추정 (단위: 초). 예: UA가 호스트 시스템에게 버퍼를 재생하는 것과 버퍼 내의 첫번째 샘플이 실제로 오디오 출력 장치에 의해 처리되는 시간을 요구하는 것. 음향 시그널을 생산하는 스피커와 헤드폰과 같은 장치에 대해서, 이 후자의 시간은 샘플의 소리가 생산될 때의 시간을 나타냅니다.</dd>
+        </dl>
+
+
         <h2>1.6. AudioParam 인터페이스</h2>
         <p>AudioParam은 0개 이상의 <strong>자동화 이벤트</strong>를 유지합니다. 각 자동화 이벤트는, AudioContext의 currentTime 어트리뷰트의 시간 좌표계의 <strong>자동화 이벤트 시간</strong>에 관련하여, 특정한 시간 범위에 대한 파라미터의 값 변화를 명시합니다. 자동화 이벤트의 리스트는 자동화 이벤트 시간의 오름차순으로 유지됩니다.</p>
         <p>주어진 자동화 이벤트의 행동은 이 이벤트의 자동화 이벤트 시간과 리스트의 인접한 이벤트의 자동화 이벤트 뿐만이 아니라, AudioContext의 현재 시간의 함수입니다. 다음의 <strong>자동화 메서드</strong>들은 이벤트 리스트에 메서드에 따른 새로운 이벤트를 추가함으로써 이벤트 리스트를 변경시킵니다.</p>
